--- a/index.html
+++ b/index.html
@@ -44,18 +44,23 @@
 
     /* Header de Alta Categoría */
     header {
-      background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-            url('https://i.ibb.co/dssh3x2v/hotel.png') no-repeat center center;
-      background-size: cover;
-      color: white;
-      text-align: center;
-      min-height: 85vh; 
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      padding: 20px;
-    }
+  /* Imagen profesional de respaldo con capa oscura para legibilidad */
+  background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
+              url('https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&w=1920&q=80') no-repeat center center;
+  
+  background-size: cover;
+  color: white;
+  text-align: center;
+  
+  /* Altura imponente para nivel corporativo */
+  min-height: 85vh; 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  
+  padding: 20px;
+}
     header h1 {
       font-size: clamp(2.5rem, 8vw, 4.5rem);
       margin: 0;
@@ -246,5 +251,6 @@
   </script>
 </body>
 </html>
+
 
 
