Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     header {
   /* Imagen profesional de respaldo con capa oscura para legibilidad */
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
-              url('https://images.unsplash.com/photo-1566073771259-6a8506099945?auto=format&fit=crop&w=1920&q=80') no-repeat center center;
+              url('https://i.ibb.co/dssh3x2v/hotel.png') no-repeat center center;
   
   background-size: cover;
   color: white;
@@ -251,6 +251,7 @@
   </script>
 </body>
 </html>
+
 
 
 
