--- a/index.html
+++ b/index.html
@@ -1480,9 +1480,9 @@
         del hotel que compartiste. Se muestran como
         fondos del slider con JavaScript.
       -->
-      <div class="hero-slide activo" style="background-image: linear-gradient(rgba(26,18,8,0.4), rgba(26,18,8,0.4)), url('WhatsApp_Image_2026-02-27_at_7_32_29_AM.jpeg'); background-size:cover; background-position:center;"></div>
-      <div class="hero-slide" style="background-image: linear-gradient(rgba(26,18,8,0.4), rgba(26,18,8,0.4)), url('WhatsApp_Image_2026-02-27_at_7_32_29_AM__1_.jpeg'); background-size:cover; background-position:center;"></div>
-      <div class="hero-slide" style="background-image: linear-gradient(rgba(26,18,8,0.4), rgba(26,18,8,0.4)), url('WhatsApp_Image_2026-02-27_at_7_32_30_AM.jpeg'); background-size:cover; background-position:center;"></div>
+      <div class="hero-slide activo" style="background-image: linear-gradient(rgba(26,18,8,0.4), rgba(26,18,8,0.4)), url('img1.jpeg'); background-size:cover; background-position:center;"></div>
+      <div class="hero-slide" style="background-image: linear-gradient(rgba(26,18,8,0.4), rgba(26,18,8,0.4)), url('img2.jpeg'); background-size:cover; background-position:center;"></div>
+      <div class="hero-slide" style="background-image: linear-gradient(rgba(26,18,8,0.4), rgba(26,18,8,0.4)), url('img3.jpeg'); background-size:cover; background-position:center;"></div>
     </div>
 
     <div class="hero-overlay"></div>
@@ -1565,7 +1565,7 @@
         <!-- Columna izquierda: imagen -->
         <div class="historia-imagen-wrapper reveal">
           <img
-            src="WhatsApp_Image_2026-02-27_at_7_32_31_AM__3_.jpeg"
+            src="img8.jpeg"
             alt="Lobby de Mayanza Grand Hotels"
             class="historia-imagen-principal"
           >
@@ -1644,7 +1644,7 @@
 
       <!-- Tarjeta 1 -->
       <div class="hab-card reveal">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_30_AM__1_.jpeg" alt="Suite Ancestral">
+        <img src="img4.jpeg" alt="Suite Ancestral">
         <div class="hab-overlay"></div>
         <div class="hab-info">
           <div class="hab-categoria">Suite Deluxe</div>
@@ -1656,7 +1656,7 @@
 
       <!-- Tarjeta 2 -->
       <div class="hab-card reveal reveal-delay-1">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_31_AM.jpeg" alt="Master Suite Quetzal">
+        <img src="img5.jpeg" alt="Master Suite Quetzal">
         <div class="hab-overlay"></div>
         <div class="hab-info">
           <div class="hab-categoria">Master Suite</div>
@@ -1668,7 +1668,7 @@
 
       <!-- Tarjeta 3 -->
       <div class="hab-card reveal reveal-delay-2">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_31_AM__1_.jpeg" alt="Suite Gran Lobby">
+        <img src="img6.jpeg" alt="Suite Gran Lobby">
         <div class="hab-overlay"></div>
         <div class="hab-info">
           <div class="hab-categoria">Villa Presidencial</div>
@@ -1680,7 +1680,7 @@
 
       <!-- Tarjeta 4 -->
       <div class="hab-card reveal reveal-delay-3">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_32_AM.jpeg" alt="Suite Superior Maya">
+        <img src="img9.jpeg" alt="Suite Superior Maya">
         <div class="hab-overlay"></div>
         <div class="hab-info">
           <div class="hab-categoria">Suite Superior</div>
@@ -1692,7 +1692,7 @@
 
       <!-- Tarjeta 5 -->
       <div class="hab-card reveal">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_32_AM__1_.jpeg" alt="Suite Kukulkán">
+        <img src="img10.jpeg" alt="Suite Kukulkán">
         <div class="hab-overlay"></div>
         <div class="hab-info">
           <div class="hab-categoria">Suite Boutique</div>
@@ -1704,7 +1704,7 @@
 
       <!-- Tarjeta 6 -->
       <div class="hab-card reveal reveal-delay-1">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_32_AM__2_.jpeg" alt="Suite Tzolkin">
+        <img src="img11.jpeg" alt="Suite Tzolkin">
         <div class="hab-overlay"></div>
         <div class="hab-info">
           <div class="hab-categoria">Suite Heritage</div>
@@ -1801,28 +1801,28 @@
 
     <div class="galeria-mosaic">
       <div class="galeria-item">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_29_AM__1_.jpeg" alt="Vista exterior Mayanza">
+        <img src="img2.jpeg" alt="Vista exterior Mayanza">
       </div>
       <div class="galeria-item">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_31_AM__2_.jpeg" alt="Piscina Mayanza">
+        <img src="img7.jpeg" alt="Piscina Mayanza">
       </div>
       <div class="galeria-item">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_32_AM__3_.jpeg" alt="Habitación Mayanza">
+        <img src="img12.jpeg" alt="Habitación Mayanza">
       </div>
       <div class="galeria-item">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_32_AM__4_.jpeg" alt="Lobby Mayanza">
+        <img src="img13.jpeg" alt="Lobby Mayanza">
       </div>
       <div class="galeria-item">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_32_AM__5_.jpeg" alt="Salón Mayanza">
+        <img src="img14.jpeg" alt="Salón Mayanza">
       </div>
       <div class="galeria-item">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_31_AM__3_.jpeg" alt="Restaurante Mayanza">
+        <img src="img8.jpeg" alt="Restaurante Mayanza">
       </div>
       <div class="galeria-item">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_30_AM__1_.jpeg" alt="Suite Mayanza">
+        <img src="img4.jpeg" alt="Suite Mayanza">
       </div>
       <div class="galeria-item">
-        <img src="WhatsApp_Image_2026-02-27_at_7_32_32_AM.jpeg" alt="Detalle cultural Mayanza">
+        <img src="img9.jpeg" alt="Detalle cultural Mayanza">
       </div>
     </div>
   </section>
@@ -2145,11 +2145,13 @@
        Cuando la página termina de cargar (window.onload),
        ocultamos la pantalla de carga.
     ================================================== */
-    window.addEventListener('load', () => {
-      setTimeout(() => {
-        document.getElementById('preloader').classList.add('oculto');
-      }, 800); // Esperamos 800 milisegundos antes de ocultar
-    });
+    /* Ocultar preloader - máximo 1.5s sin importar si imágenes cargaron */
+    function ocultarPreloader() {
+      document.getElementById("preloader").classList.add("oculto");
+    }
+    window.addEventListener("load", () => setTimeout(ocultarPreloader, 600));
+    /* Seguro de emergencia: si hay imágenes rotas y load no dispara bien, oculta igual */
+    setTimeout(ocultarPreloader, 1500);
 
     /* ==================================================
        NAVBAR: Cambio de estilo al hacer scroll
