Update contact email and website link in footer

--- a/index.html
+++ b/index.html
@@ -2048,9 +2048,9 @@
         <div class="footer-titulo-col">Contacto</div>
         <ul class="footer-links">
           <li><a href="https://wa.me/50256311624">+502 5631 1624</a></li>
-          <li><a href="/cdn-cgi/l/email-protection#e29087918790948391a28f839b838c9883cc818d8f"><span class="__cf_email__" data-cfemail="225047514750544351624f435b434c58430c414d4f">[email&#160;protected]</span></a></li>
+          <li><a href="/cdn-cgi/l/email-protection#e29087918790948391a28f839b838c9883cc818d8f"><span class="__cf_email__" data-cfemail="225047514750544351624f435b434c58430c414d4f">mayanzahotels@gmail.com</span></a></li>
           <li><a href="#">Flores, Petén, Guatemala</a></li>
-          <li><a href="#">www.mayanza.com</a></li>
+          <li><a href="#">https://mayanza-rouge.vercel.app/#hero</a></li>
         </ul>
       </div>
     </div>
